--- a/MugMatcher/MugMatcher.Web/Views/Home/Index.cshtml
+++ b/MugMatcher/MugMatcher.Web/Views/Home/Index.cshtml
@@ -4,5 +4,7 @@
 	Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<a href="/find">Find</a>
-<a href="/results">Results</a>
+<div class="link-wrapper">
+    <a class="basic-link" href="/find">Find</a>
+    <a class="basic-link" href="/results">Results</a>
+</div>
