--- a/MugMatcher/MugMatcher.Web/Content/Site.css
+++ b/MugMatcher/MugMatcher.Web/Content/Site.css
@@ -1,5 +1,10 @@
-﻿html {
-  font-family: sans-serif;
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+body {
+  height: 100%;
+  background-color: #47637f;
+  color: white;
 }
 img {
   max-width: 100%;
@@ -16,4 +21,80 @@ img {
 }
 .listView .listViewItem:nth-child(2n) {
   background: #eee;
+}
+.basic-link {
+  text-align: center;
+}
+.file-picker-wrapper {
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  top: 45%;
+}
+.inputfile {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+.inputfile + label {
+  font-size: 42px;
+  font-weight: 700;
+  color: white;
+  display: inline-block;
+  cursor: pointer;
+  /* "hand" cursor */
+}
+.inputfile:focus + label,
+.inputfile + label:hover {
+  color: #3498db;
+}
+.img-wrapper {
+  height: 700px;
+  width: 350px;
+  float: left;
+}
+#missing-persons-img {
+  max-height: 100%;
+  max-width: 350px;
+}
+.missing-persons-wrapper {
+  position: fixed;
+  top: 20%;
+  left: 20%;
+}
+.details-wrapper {
+  margin-left: 75px;
+  height: 100%;
+  float: left;
+}
+.input,
+#submit {
+  margin-top: 25px;
+  background-color: #3a5065;
+  color: white;
+  font-size: 18px;
+}
+#submit {
+  margin-left: 60px;
+  border-width: 1px;
+}
+.input {
+  border: none;
+  padding: 5px;
+  width: 220px;
+}
+#gender-input {
+  width: 230px;
+  padding-left: 0;
+  padding-right: 0;
+  height: 32px;
+}
+#sumbit {
+  color: white;
+}
+.placeholder {
+  color: #999;
 }
