--- a/MugMatcher/MugMatcher.Web/Content/Site.css
+++ b/MugMatcher/MugMatcher.Web/Content/Site.css
@@ -78,8 +78,9 @@ img {
   font-size: 18px;
 }
 #submit {
-  margin-left: 60px;
+  margin-left: 100px;
   border-width: 1px;
+  font-size: 32px;
 }
 .input {
   border: none;
@@ -97,4 +98,11 @@ img {
 }
 .placeholder {
   color: #999;
+}
+#lat-input {
+  width: 95px;
+}
+#long-input {
+  width: 100px;
+  margin-left: 10px;
 }
