--- a/MugMatcher/MugMatcher.Web/Content/Site.less
+++ b/MugMatcher/MugMatcher.Web/Content/Site.less
@@ -92,8 +92,9 @@ img{
 }
 
 #submit{
-    margin-left:60px;
+    margin-left:100px;
     border-width:1px;
+    font-size:32px;
 }
 
 .input{
@@ -115,4 +116,13 @@ img{
 
 .placeholder{
     color: #999;
+}
+
+#lat-input{
+    width:95px;
+}
+
+#long-input{
+    width:100px;
+    margin-left:10px;
 }
