--- a/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
+++ b/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
@@ -23,8 +23,10 @@
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
             </select><br />
-            <button id="submit" ng-click="findPerson()">Find them!</button>
+            <input class="input" id="lat-input" type="text" placeholder="Latitude"/>
+            <input class="input" id="long-input" type="text" placeholder="Longitude" />
         </div>
+        <br/><button id="submit" ng-click="findPerson()">Find them!</button>
     </div>
 </div>
 
