--- a/MugMatcher/MugMatcher.Web/Views/Shared/_Layout.cshtml
+++ b/MugMatcher/MugMatcher.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,10 @@
 		<script src="/Scripts/find.js" defer></script>
 		<script src="/Scripts/directives/scopeInit.js" defer></script>
 	</head>
-	<body ng-controller="main">
-		@RenderBody()
-	</body>
+<body ng-controller="main">
+<header>
+    
+</header>
+@RenderBody()
+</body>
 </html>
