--- a/MugMatcher/MugMatcher.Web/Content/Site.css
+++ b/MugMatcher/MugMatcher.Web/Content/Site.css
@@ -106,3 +106,11 @@ img {
   width: 100px;
   margin-left: 10px;
 }
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
+  display: none !important;
+}
