--- a/MugMatcher/MugMatcher.Web/Content/Site.less
+++ b/MugMatcher/MugMatcher.Web/Content/Site.less
@@ -126,3 +126,7 @@ img{
     width:100px;
     margin-left:10px;
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
