--- a/MugMatcher/MugMatcher.Web/Content/Site.less
+++ b/MugMatcher/MugMatcher.Web/Content/Site.less
@@ -18,6 +18,12 @@ header{background-image:url('logo.png');
        border-bottom:3px solid #485664;
 }
 
+.bigButton{width:100%;background-color:#333;
+           padding:8px;
+}
+.bigButton:focus{color:#a6c2dd !important}
+.bigButton:hover{color:#a6c2dd !important}
+
 img{
 	max-width:100%;
 }
