--- a/MugMatcher/MugMatcher.Web/Content/Site.css
+++ b/MugMatcher/MugMatcher.Web/Content/Site.css
@@ -1,4 +1,4 @@
-html {
+﻿html {
   font-family: Arial, Helvetica, sans-serif;
 }
 body {
@@ -51,24 +51,21 @@ img {
 .inputfile + label:hover {
   color: #3498db;
 }
+.column {
+  width: 49%;
+  display: inline-block;
+}
 .img-wrapper {
-  height: 700px;
-  width: 350px;
-  float: left;
+  width: 100%;
+  padding: 10px;
 }
 #missing-persons-img {
   max-height: 100%;
   max-width: 350px;
 }
-.missing-persons-wrapper {
-  position: fixed;
-  top: 20%;
-  left: 20%;
-}
 .details-wrapper {
-  margin-left: 75px;
-  height: 100%;
-  float: left;
+  width: 100%;
+  padding: 10px;
 }
 .input,
 #submit {
@@ -105,4 +102,8 @@ img {
 #long-input {
   width: 100px;
   margin-left: 10px;
+}
+.resultImage {
+  max-height: 500px;
+  float: left;
 }
