--- a/MugMatcher/MugMatcher.Web/Content/Site.less
+++ b/MugMatcher/MugMatcher.Web/Content/Site.less
@@ -61,10 +61,14 @@ img{
     color: #3498db;
 }
 
+.column{
+	width:49%;
+	display:inline-block;
+}
+
 .img-wrapper{
-    height:700px;
-    width:350px;
-    float:left;
+	width:100%;
+	padding:10px;
 }
 
 #missing-persons-img{
@@ -73,15 +77,11 @@ img{
 }
 
 .missing-persons-wrapper{
-    position:fixed;
-    top:20%;
-    left:20%;
 }
 
 .details-wrapper{
-    margin-left: 75px;
-    height: 100%;
-    float:left;
+	width:100%;
+	padding:10px;
 }
 
 .input, #submit{
@@ -125,4 +125,9 @@ img{
 #long-input{
     width:100px;
     margin-left:10px;
+}
+
+.resultImage{
+	max-height:500px;
+	float:left;
 }
