--- a/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
+++ b/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
@@ -9,24 +9,28 @@
                onchange="angular.element(this).scope().filePicked(this)"/>
         <label for="file-picker">Choose a missing person</label>
     </div>
-    <div ng-if="hasFileBeenPicked" class="missing-persons-wrapper">
-        <div class="img-wrapper">
-            <img id="missing-persons-img" src="http://i.imgur.com/Zvz0eve.jpg" />
-        </div>
-        
-        <div class="details-wrapper">
-            <input class="input" id="name-input" name="name-input" type="text" placeholder="Persons name"/> <br/>
-            <input class="input" id="age-input" name="name-input" type="text" placeholder="Persons age" /> <br />
-            <select class="input" id="gender-input" name="name-input" placeholder="Persons gender"> 
-                <option disabled selected>Persons gender</option>
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-            </select><br />
-            <input class="input" id="lat-input" type="text" placeholder="Latitude"/>
-            <input class="input" id="long-input" type="text" placeholder="Longitude" />
-        </div>
-        <br/><button id="submit" ng-click="findPerson()">Find them!</button>
-    </div>
+	<div ng-if="hasFileBeenPicked" class="missing-persons-wrapper">
+		<div class="column">
+			<div class="img-wrapper">
+				<img id="missing-persons-img" src="http://i.imgur.com/Zvz0eve.jpg" />
+			</div>
+		</div>
+		<div class="column">
+			<div class="details-wrapper">
+				<input class="input" id="name-input" name="name-input" type="text" placeholder="Persons name" /> <br />
+				<input class="input" id="age-input" name="name-input" type="text" placeholder="Persons age" /> <br />
+				<select class="input" id="gender-input" name="name-input" placeholder="Persons gender">
+					<option disabled selected>Persons gender</option>
+					<option value="Male">Male</option>
+					<option value="Female">Female</option>
+				</select><br />
+				<input class="input" id="lat-input" type="text" placeholder="Latitude" />
+				<input class="input" id="long-input" type="text" placeholder="Longitude" />
+			</div>
+			<br /><button id="submit" ng-click="findPerson()">Find them!</button>
+		</div>
+		<img class="resultImage" ng-repeat="result in results" ng-src="/find/image?file={{result.File}}"/>
+	</div>
 </div>
 
 @*<div ng-controller="find">
