--- a/MugMatcher/MugMatcher.Web/Content/Site.css
+++ b/MugMatcher/MugMatcher.Web/Content/Site.css
@@ -3,8 +3,18 @@ html {
 }
 body {
   height: 100%;
-  background-color: #47637f;
+  background-color: #a6c2dd;
   color: white;
+  margin: 0;
+  padding: 0;
+}
+header {
+  background-image: url('logo.png');
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  height: 100px;
+  background-color: #fff;
+  border-bottom: 3px solid #485664;
 }
 img {
   max-width: 100%;
