--- a/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
+++ b/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
@@ -12,25 +12,26 @@
 	<div ng-if="hasFileBeenPicked" class="missing-persons-wrapper">
 		<div class="column">
 			<div class="img-wrapper">
-            <img id="missing-persons-img" />
+				<img id="missing-persons-img" />
 			</div>
 		</div>
 		<div class="column">
 			<div class="details-wrapper">
-            <input ng-model="name" class="input" id="name-input" name="name-input" type="text" placeholder="Persons name"/> <br/>
-            <input ng-model="age" class="input" id="age-input" name="name-input" type="text" placeholder="Persons age" /> <br />
-            <select ng-model="gender" class="input" id="gender-input" name="name-input" placeholder="Persons gender"> 
+				<input ng-model="name" class="input" id="name-input" name="name-input" type="text" placeholder="Persons name"/> <br/>
+				<input ng-model="age" class="input" id="age-input" name="name-input" type="text" placeholder="Persons age" /> <br />
+				<select ng-model="gender" class="input" id="gender-input" name="name-input" placeholder="Persons gender"> 
 					<option disabled selected>Persons gender</option>
 					<option value="Male">Male</option>
 					<option value="Female">Female</option>
 				</select><br />
-            <input ng-model="lat" class="input" id="lat-input" type="text" placeholder="Latitude"/>
-            <input ng-model="long" class="input" id="long-input" type="text" placeholder="Longitude" />
+				<input ng-model="lat" class="input" id="lat-input" type="text" placeholder="Latitude"/>
+				<input ng-model="long" class="input" id="long-input" type="text" placeholder="Longitude" />
 			</div>
 			<br /><button id="submit" ng-click="findPerson()">Find them!</button>
 		</div>
 		<img class="resultImage" ng-repeat="result in results" ng-src="/find/image?file={{result.File}}"/>
 	</div>
+	<div ng-if="showLoadingIcon" style="padding-left: 100px;"><img src="/Content/loading.gif"/></div>
 </div>
 
 @*<div ng-controller="find">
@@ -44,6 +45,6 @@
 		<div ng-if="personFound">Person found</div>
 		<div ng-if="!personFound">Person not found</div>
 	</div>
-
+	
 	<scope-init value="fileList">@Json.Encode(Model.FileList)</scope-init>
 </div>*@
