--- a/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
+++ b/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
@@ -31,7 +31,7 @@
 		</div>
 		<img class="resultImage" ng-repeat="result in results" ng-src="/find/image?file={{result.File}}"/>
 	</div>
-	<div ng-if="showLoadingIcon" style="padding-left: 100px;"><img src="/Content/loading.gif"/></div>
+	<div ng-if="showLoadingIcon" style="left: 50%;position: absolute; top: 50%;"><img src="/Content/loading.gif"/></div>
 </div>
 
 @*<div ng-controller="find">
