--- a/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
+++ b/MugMatcher/MugMatcher.Web/Views/Find/Index.cshtml
@@ -11,7 +11,7 @@
     </div>
 	<div ng-if="hasFileBeenPicked" class="missing-persons-wrapper">
 		<div class="column">
-			<div class="img-wrapper">
+			<div class="img-wrapper" style="text-align: right;">
             <img id="missing-persons-img" />
 			</div>
 		</div>
